--- a/config/elasticsearch.yml
+++ b/config/elasticsearch.yml
@@ -1,5 +1,5 @@
-network.host: _site_
-#0.0.0.0
+network.host: 0.0.0.0
+#0.0.0.0, _site_
 
 # this value is required because we set "network.host"
 # be sure to modify it appropriately for a production cluster deployment
